Update: move accesstoken to cookie
